feat: Refactor Sa-Token integration by replacing PlusSaTokenDao with RedisSaTokenDao, adding SaTokenProperties for configuration, and updating LoginHelper for improved user management